dark mode fix

--- a/DARK/libraryroot.custom.css
+++ b/DARK/libraryroot.custom.css
@@ -101,37 +101,37 @@
   --DOWNLOADSFIGURE: VAR(--ACCENT);
   --OP: 63%;
   --OP2: 60.5%;
-  --FILT: BRIGHTNESS(0);
-  --BASE1: #e4e4e4;
-  --BASE2: #dedede;
-  --BASE3: #eaeaea;
-  --BASE4: #efefef;
-  --BASE5: #d1d1d1;
-  --ACCENT: #585858;
+  --FILT: BRIGHTNESS(1);
+  --BASE1: #1A1A1A;
+  --BASE2: #202020;
+  --BASE3: #272727;
+  --BASE4: #3a3a3a;
+  --BASE5: #000;
+  --ACCENT: #C1C1C1;
   --BUTTONBORDER: #b8b8b8;
   --BUTTONBORDER2: #b6b6b6;
   --CHECKBOX: TRANSPARENT;
   --CHECKBOXBORDER: #b3b3b3;
   --CHECKBOXBORDERRADIUS: 4px;
   --CHECKBOXBORDERHOVER: VAR(--ACCENT);
-  --BUTTONBORDERHOVER: #8d8d8d;
-  --TEXTENTRYHIGHLIGHT: #d5d5d5;
+  --BUTTONBORDERHOVER: var(--BLACK);
+  --TEXTENTRYHIGHLIGHT:#585858;
   --BUTTON2BORDERWIDTH: 1px;
-  --BUTTON2: #d6d6d6;
+  --BUTTON2: #292929;
   --SHOWCASECOLLAPSERHOVER: VAR(--BUTTONBORDERHOVER);
   --CAPTIONBACKGROUNDHOVER: VAR(--BUTTON2);
   --CAPTIONHOVER: var(--ACCENT);
   --BUTTON2PRIMARY: VAR(--BLUE);
   --BUTTON2PRIMARYBORDER: VAR(--BLUE);
-  --BUTTON2PRIMARYTEXT: VAR(--WHITE);
+  --BUTTON2PRIMARYTEXT: VAR(--BLACK);
   --BUTTON2PRIMARYHOVER: VAR(--BLUE2);
   --BUTTON2PRIMARYBORDERHOVER: VAR(--BLUE2);
   --BUTTON2HOVER: VAR(--BUTTON2);
   --BUTTON2TEXT: VAR(--ACCENT);
   --BUTTON2FONTWEIGHT: 390;
-  --GAMENAMERIGHTCLICKBACKGROUNDHOVER: #d5d5d5;
-  --FILTERCLEARACTIVE: #cacaca;
-  --BLACK: #000;
+  --GAMENAMERIGHTCLICKBACKGROUNDHOVER: var(--BASE2);
+  --FILTERCLEARACTIVE: var(--LISTITEMBACKGROUNDHOVER);
+  --BLACK: rgb(255, 255, 255);
   --RED: #d21116;
   --RED2: #8a0005;
   --GREEN: #54a448;
@@ -159,7 +159,7 @@
   --TEXTENTRY3: #e4e4e4;
   --TEXTENTRYREVIEWBR: 4px;
   --BOXSHADOW: 0 1px 2px;
-  --SHADOW: #d6d1d1;
+  --SHADOW: var(--DIVIDER);
   --SCROLLTOTOPSIDEBAR: transparent;
   --SCROLLTOTOPSIDEBARBACKGROUNDBORDERRADIUS: 30px;
   --SCROLLTOTOPSIDEBARBACKGROUNDHOVER: #d5d5d5;
@@ -297,7 +297,7 @@
   --SCROLLBARBORDERRADIUS: 0px;
   --SCROLLBAROP: 0;
   --SCROLLBARHOVEROP: 1;
-  --SCROLLBAR: VAR(--ACCENT);
+  --SCROLLBAR: #4D4D4D;
   --SCROLLBARWIDTH: 14px;
   --SCROLLBARHOVERWIDTH: 14px;
   --RATINGICONBACKGROUNDHOVER: NONE;
@@ -307,11 +307,11 @@
   --LIKEBUTTONPRESSED: VAR(--BLUE);
   --UNLIKEBUTTON: VAR(--RED);
   --DISLIKEBUTTONPRESSED: VAR(--RED);
-  --SCROLLBARHOVER: VAR(--BLACK);
-  --BUTTON1TEXTCOLOR: VAR(--WHITE);
-  --BUTTON1: VAR(--ACCENT);
+  --SCROLLBARHOVER:#787878;
+  --BUTTON1TEXTCOLOR: VAR(--BLACK);
+  --BUTTON1: VAR(--BUTTON2);
   --BUTTON1BORDER: NONE;
-  --BUTTON1HOVER: VAR(--BLACK);
+  --BUTTON1HOVER: VAR(--white);
   --BUTTONHOVER: VAR(--BLACK);
   --GAMESTATEDASH: VAR(--ACCENT);
   --RUNNINGGAMENAMECOLOR: VAR(--GREEN);
@@ -337,8 +337,8 @@
   --UNINSTALLEDGAMENAMEHOVERCOLOR: VAR(--ACCENT);
   --QUICKINSTALLBORDERRADIUS: VAR(--BORDERRADIUS);
   --QUICKINSTALLBOTTOMMARGIN: 3.5%; /*DEFAULT IS 2%*/
-  --APPPORTRAITINSTALLBUTTON: VAR(--ACCENT);
-  --APPPORTRAITINSTALLBUTTONHOVER: VAR(--BLACK);
+  --APPPORTRAITINSTALLBUTTON: VAR(--BASE1);
+  --APPPORTRAITINSTALLBUTTONHOVER: VAR(--LISTITEMBACKGROUNDHOVER);
   --BROADCASTPLAYBUTTONWIDTH: 40px;
   --BROADCASTPLAYBUTTONHEIGHT: 40px;
   --BROADCASTPLAYBUTTONPADDING: 8px;
@@ -353,13 +353,13 @@
   --SHELFPLAYBUTTONHOVER: VAR(--BLACK);
   --SHELFINSTALLBUTTON: VAR(--ACCENT);
   --SHELFINSTALLBUTTONHOVER: VAR(--BLACK);
-  --INSTALLBUTTON: VAR(--ACCENT);
-  --INSTALLBUTTONHOVER: VAR(--BLACK);
-  --PLAYBUTTON: VAR(--ACCENT);
-  --PLAYBUTTONHOVER: VAR(--BLACK);
+  --INSTALLBUTTON: VAR(--BASE1);
+  --INSTALLBUTTONHOVER: VAR(--LISTITEMBACKGROUNDHOVER);
+  --PLAYBUTTON: VAR(--BASE1);
+  --PLAYBUTTONHOVER: VAR(--LISTITEMBACKGROUNDHOVER);
   --GAMEGROUPNAMECOLOR: VAR(--ACCENT);
   --GAMEGROUPNAMECOLORHOVER: VAR(--ACCENT);
-  --LISTITEMBACKGROUNDHOVER: VAR(--BUTTON2);
+  --LISTITEMBACKGROUNDHOVER: #000;
   --SELECTEDLISTITEMBACKGROUNDHOVER: VAR(--BUTTON2);
   --LISTITEMRIGHTBORDERWIDTH: 0;
   --LISTITEMRIGHTBORDER: TRANSPARENT;
@@ -370,9 +370,9 @@
   --CONTEXTMENUPLAYBUTTON: NONE;
   --CONTEXTMENUACTIONBUTTONTEXT: VAR(--ACCENT);
   --CONTEXTMENUPLAYBUTTONHOVER: var(--LISTITEMBACKGROUNDHOVER);
-  --CONTEXTMENUINSTALLBUTTONHOVER: VAR(--BUTTON2);
+  --CONTEXTMENUINSTALLBUTTONHOVER: VAR(--LISTITEMBACKGROUNDHOVER);
   --CHECKMARKPADDING: 2px;
-  --CHECKMARK: VAR(--WHITE);
+  --CHECKMARK: VAR(--BLACK);
   --CHECKMARKHOVER: VAR(--WHITE);
   --CHECKMARKBACKGROUND: VAR(--BLUE);
   --CHECKMARKBACKGROUNDHOVER: VAR(--BLUE2);
@@ -430,7 +430,7 @@
   --REMOVESEARCHFILTEROP: 40%;
   --REMOVESEARCHFILTERHOVEROP: 1;
   --SEARCHFILTER: VAR(--BLUE);
-  --SEARCHFILTERTEXT: VAR(--WHITE);
+  --SEARCHFILTERTEXT: VAR(--BLACK);
   --SEARCHFILTERFONTWEIGHT: unset;
   --INACTIVEDROPDOWNFILTERICON: VAR(--ACCENT);
   --INACTIVEDROPDOWNFILTERICONHOVER: VAR(--BLACK);
@@ -460,7 +460,7 @@
   --SEARCHFILTERROUNDED: 4px;
   --INSTALLEDGAMENAMEFONTWEIGHT: 500;
   --STREAMINGSELECTDISPLAY: unset; /*default is unset*/
-  --ACTIONBUTTONTEXT: VAR(--WHITE);
+  --ACTIONBUTTONTEXT: VAR(--BLACK);
   --ACTIONBUTTONTEXTFONTWEIGHT: 300;
   --ACTIONBUTTONROUNDED1: 50px 0 0 50px;
   --ACTIONBUTTONROUNDED2: 0 50px 50px 0;
@@ -543,6 +543,21 @@
   --SHAREDAPPDETAILHEADEROP: 0;
   --SHAREDAPPDETAILHEADERLETTERSPACING: 0;
   --SHAREDAPPDETAILHEADERFONTSIZE: 8px;
+}
+
+.SVGIcon_Button {
+  fill: var(--BLACK) !important;
+}
+
+:not(.appactionbutton_Disabled_1Pb6P)
+  > .appactionbutton_ButtonChild_2AzIX
+  svg
+  line,
+:not(.appactionbutton_Disabled_1Pb6P)
+  > .appactionbutton_ButtonChild_2AzIX
+  svg
+  polygon {
+  fill: var(--BLACK) !important;
 }
 
 /*-------------------------- STEAM DECK UI --------------------------*/
@@ -2718,10 +2733,6 @@ div.NarrowRightPanel
   display: VAR(--GAMESTATICONDISPLAY) !important;
 }
 
-.appportrait_Short_yGeS6 .appportrait_PortraitMessage_3gwMk {
-  padding-top: 10px !important;
-}
-
 .appfilterpane_Container_170Np
   .appfilterpane_FilterArea_1ennW
   .appfilterpane_FilterBucket_1axoi
@@ -3904,7 +3915,7 @@ img {
   > .appactionbutton_ButtonChild_2AzIX
   svg
   polygon {
-  stroke: VAR(--WHITE) !important;
+  stroke: VAR(--BLACK) !important;
 }
 
 .gamelistentry_Container_2-O4Z.gamelistentry_Uninstalled_5YTBr:hover,
@@ -5792,9 +5803,7 @@ div.ShortRightPanel
 .appportrait_LibraryItemBox_WYgDg.appportrait_InFriendsActivity_3ngZC {
   border-radius: 0 !important;
 }
-.SVGIcon_Button {
-  fill: var(--WHITE) !important;
-}
+
 .contextmenu_contextMenuItem_1n7Wl.contextmenu_SubMenu_2RlEO
   .SVGIcon_DownArrowContextMenu {
   fill: var(--ACCENT) !important;
@@ -5971,16 +5980,7 @@ div.NarrowRightPanel
   color: var(--ACCENT) !important;
   font-weight: VAR(--FILTERBUCKETLABELFONTWEIGHT) !important;
 }
-:not(.appactionbutton_Disabled_1Pb6P)
-  > .appactionbutton_ButtonChild_2AzIX
-  svg
-  line,
-:not(.appactionbutton_Disabled_1Pb6P)
-  > .appactionbutton_ButtonChild_2AzIX
-  svg
-  polygon {
-  fill: var(--WHITE) !important;
-}
+
 .appdetailsactivitysection_NoActivity_2-kDc,
 .appdetailsactivitysection_Loading_3UShz {
   color: var(--ACCENT) !important;
